# SNN_RL

./: .gitignore  AGENTS.md  FILE_TREE.txt  README.md  codex.remote.toml  pyproject.toml
configs/: default.yaml
configs/dataset/: iv2b.yaml  iv2b_fb6.yaml  iv2b_w3_fb6.yaml
configs/eval/: metrics.yaml  pareto.yaml
configs/exp/: iv2b_cursor_ann_ppo.yaml  iv2b_cursor_snn_ppo.yaml  iv2b_stop_ann_ppo.yaml  iv2b_stop_snn_distill_pretrain_sota.yaml  iv2b_stop_snn_imitation_pretrain_sota.yaml  iv2b_stop_snn_policy_distill_pretrain_event_sota.yaml  iv2b_stop_snn_policy_distill_pretrain_sota.yaml  iv2b_stop_snn_ppo.yaml  iv2b_stop_snn_ppo_event_sota_finetune.yaml  iv2b_stop_snn_ppo_spikefix.yaml  iv2b_stop_snn_ppo_spikefix_sota.yaml  iv2b_stop_snn_ppo_spikefix_sota_finetune.yaml  iv2b_stop_snn_ppo_spikefix_sota_tc0.yaml  iv2b_stop_snn_pretrain.yaml
configs/task/: cursor_1d.yaml  (+1 more)
docs/: ITERATIONS.md  REPRO.md
results/: README.md
scripts/: append_iteration_log.py  lab_cv_sweep_stop_lda_features.sh  lab_s10_stop_event_homeostasis_pareto.sh  lab_s5_stop_distill_pareto.sh  lab_s7_stop_policy_distill_pareto.sh  lab_sweep_cursor_snn.sh  lab_sweep_stop_snn.sh  remote_lab_ex_run.sh  remote_lab_ex_sync.sh  summarize_cv_sweep_stop_lda.py
tests/: test_actor_critic_reset.py  test_config.py  test_encoder_eeg_only_wrapper.py  test_eval_stop_and_decide_metrics.py  test_force_commit_last_step_mask.py  test_obs_aug_stop.py  test_policy_distill_teacher_policy.py  test_spike_homeostasis_loss.py  test_spiking_mlp_spike_rate.py  test_stop_and_decide_env.py  test_stop_imitation_targets.py
(+483 files in other folders)
